<resources>
    <string name="app_name">Count It Down</string>

    <!-- Event categories -->
    <string name="category_title">Category</string>
    <string name="category_all_events">All Events</string>
    <string name="category_past_events">Past Events</string>
    <string name="category_business">Business</string>
    <string name="category_education">Education</string>
    <string name="category_leisure">Leisure</string>
    <string name="category_special">Special</string>
    <string name="category_sports">Sports</string>

    <array name="categories">
        <item>@string/category_business</item>
        <item>@string/category_education</item>
        <item>@string/category_leisure</item>
        <item>@string/category_special</item>
        <item>@string/category_sports</item>
    </array>

    <!-- Event Cardview Text -->
    <string name="event_days_remaining_text">days and</string>
    <string name="event_hours_remaining_text">hours away</string>
    <string name="event_hours_ago_text">hours ago</string>

    <string name="event_days_text">Days</string>
    <string name="event_hours_text">Hours</string>
    <string name="event_minutes_text">Minutes</string>

    <!-- Action menu -->
    <string name="action_search">Search</string>
    <string name="search_hint">Search by name</string>
    <string name="action_settings">Settings</string>
    <string name="action_sort_by">Sort by</string>
    <string name="sort_by_name">Name</string>
    <string name="sort_by_date">Date</string>

    <array name="sort_by_options">
        <item>@string/sort_by_date</item>
        <item>@string/sort_by_name</item>
    </array>

    <!-- New Event Activity -->
    <string name="hint_event_name">Event Name</string>
    <string name="hint_event_date">Event Date</string>
    <string name="hint_event_time">Event Time</string>

    <!-- User messages -->
    <string name="blank_fields">Select an image and fill all the fields</string>

    <!-- Event detail titles -->
    <string name="event_date_title">Date</string>
    <string name="event_time_title">Time</string>
</resources>
