<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.CreateEventActivity">

    <include
        android:id="@+id/create_event_toolbar"
        layout="@layout/toolbar" />

    <ImageView
        android:id="@+id/new_event_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintDimensionRatio="H,16:9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_event_toolbar"
        app:srcCompat="@drawable/ic_add_image_placeholder" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/add_event_image_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="@+id/new_event_image"
        app:layout_constraintEnd_toEndOf="@+id/new_event_image"
        app:srcCompat="@drawable/ic_add_a_photo_white_24dp" />

    <EditText
        android:id="@+id/add_event_name_edittext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/hint_event_name"
        android:inputType="textPersonName"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_event_image" />

    <EditText
        android:id="@+id/add_event_date_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/hint_event_date"
        android:inputType="none"
        app:layout_constraintStart_toStartOf="@+id/add_event_name_edittext"
        app:layout_constraintTop_toBottomOf="@+id/add_event_name_edittext" />

    <EditText
        android:id="@+id/add_event_time_edittext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:hint="@string/hint_event_time"
        android:inputType="none"
        app:layout_constraintEnd_toEndOf="@+id/add_event_name_edittext"
        app:layout_constraintStart_toEndOf="@+id/add_event_date_edittext"
        app:layout_constraintTop_toTopOf="@+id/add_event_date_edittext" />

    <TextView
        android:id="@+id/category_title_textview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="24dp"
        android:text="@string/category_title"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/add_event_date_edittext"
        app:layout_constraintStart_toStartOf="@+id/add_event_date_edittext"
        app:layout_constraintTop_toBottomOf="@+id/add_event_date_edittext"
        tools:text="@string/category_title" />

    <Spinner
        android:id="@+id/add_event_category_spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/add_event_time_edittext"
        app:layout_constraintStart_toStartOf="@+id/category_title_textview"
        app:layout_constraintTop_toBottomOf="@+id/category_title_textview" />

</android.support.constraint.ConstraintLayout>