<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.CreateEventActivity">

    <include
        android:id="@+id/event_detail_toolbar"
        layout="@layout/toolbar" />

    <ImageView
        android:id="@+id/event_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintDimensionRatio="H,16:9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event_detail_toolbar"
        app:srcCompat="@drawable/ic_add_image_placeholder" />

    <Space
        android:id="@+id/marginSpacer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toBottomOf="@+id/event_image"
        app:layout_constraintLeft_toLeftOf="@id/event_image"
        app:layout_constraintRight_toRightOf="@id/event_image" />

    <android.support.v7.widget.CardView
        android:id="@+id/name_cardView"
        style="@style/CustomCardViewStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/marginSpacer">

        <TextView
            android:id="@+id/event_name_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:elevation="5dp"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="36sp"
            tools:text="Event Title Here" />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/time_cardView"
        style="@style/CustomCardViewStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/name_cardView"
        app:layout_constraintStart_toStartOf="@+id/name_cardView"
        app:layout_constraintTop_toBottomOf="@+id/name_cardView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/event_days_remaining_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="0"
                    android:textColor="@android:color/black"
                    android:textSize="36sp" />

                <TextView
                    android:id="@+id/days_remaining_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/event_days_text"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/event_hours_remaining_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="0"
                    android:textColor="@android:color/black"
                    android:textSize="36sp" />

                <TextView
                    android:id="@+id/hours_remaining_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/event_hours_text"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/event_minutes_remaining_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="0"
                    android:textColor="@android:color/black"
                    android:textSize="36sp" />

                <TextView
                    android:id="@+id/minutes_remaining_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/event_minutes_text"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/about_cardView"
        style="@style/CustomCardViewStyle"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/time_cardView"
        app:layout_constraintStart_toStartOf="@+id/time_cardView"
        app:layout_constraintTop_toBottomOf="@+id/time_cardView">

    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>

